fix: navbar collapsed details

--- a/base/static/css/site.scss
+++ b/base/static/css/site.scss
@@ -17,57 +17,6 @@ body {
   }
 }
 
-html {
-  @for $i from 0 through $footer-links-max {
-    &.cms-ready {
-
-      body.footer-links-#{$i} {
-        main.site-main {
-          min-height: calc(100vh - #{get-not-main-height($i) + $django-cms-toolbar});
-
-          @media (min-width: map-get($grid-breakpoints, md)) {
-            min-height: calc(100vh - #{get-not-main-height($i, md) + $django-cms-toolbar});
-          }
-
-          @media (min-width: map-get($grid-breakpoints, xl)) {
-            min-height: calc(100vh - #{get-not-main-height($i, xl) + $django-cms-toolbar});
-          }
-        }
-      }
-
-      &.cms-toolbar-expanded {
-        body.footer-links-#{$i} {
-          main.site-main {
-            min-height: calc(100vh - #{get-not-main-height($i) + $django-cms-toolbar-expanded});
-
-            @media (min-width: map-get($grid-breakpoints, md)) {
-              min-height: calc(100vh - #{get-not-main-height($i, md) + $django-cms-toolbar-expanded});
-            }
-
-            @media (min-width: map-get($grid-breakpoints, xl)) {
-              min-height: calc(100vh - #{get-not-main-height($i, xl) + $django-cms-toolbar-expanded});
-            }
-          }
-        }
-      }
-    }
-  }
-}
-
-// django cms support
-html {
-  &.cms-ready {
-    .navbar {
-      top: $django-cms-toolbar;
-    }
-    &.cms-toolbar-expanded {
-      .navbar {
-        top: $django-cms-toolbar-expanded;
-      }
-    }
-  }
-}
-
 .post-video_wrapper {
   position: relative;
   padding-bottom: 56.25%; /* 16:9 */
